--- a/simplicity/style.cfg
+++ b/simplicity/style.cfg
@@ -19,7 +19,7 @@
 #
 
 # General Information about this style
-name = Simplicity For phpBB 3.2
+name = Simplicity
 copyright = Created by Arty (Vjacheslav Trushkin), http://www.artodia.com/, Modified by Gabriel Fischer
 style_version = 3.2.1
 phpbb_version = 3.2.1
