--- a/simplicity_gray/style.cfg
+++ b/simplicity_gray/style.cfg
@@ -19,7 +19,7 @@
 #
 
 # General Information about this style
-name = Simplicity Gray For phpBB 3.2
+name = Simplicity Gray
 copyright = Created by Arty (Vjacheslav Trushkin), http://www.artodia.com/, Modified by Gabriel Fischer
 style_version = 3.2.1
 phpbb_version = 3.2.1
@@ -29,4 +29,4 @@ phpbb_version = 3.2.1
 
 # Parent style
 # Set value to empty or to this style's name if this style does not have a parent style
-parent = Simplicity For phpBB 3.2
+parent = Simplicity
